--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
-    "gulp-imagemin": "^7.1.0",  
+    "gulp-imagemin": "^7.1.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-uglify": "^3.0.2",
@@ -26,7 +26,8 @@
     "mixitup": "^3.3.1",
     "rateyo": "^2.3.2",
     "sass": "^1.43.4",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^7.3.3"
   },
   "dependencies": {
     "@fancyapps/fancybox": "^3.5.7",
